fix bug observed on mobile by removing margin-bottom for main section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body * {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 12.5%;
+    /* margin-bottom: 12.5%; */
     box-shadow: 5px 10px 30px whitesmoke inset, 7px 20px 80px #fad7e3b8 inset;
 }
 
